Moved large pieces of the breast cancer disease module into submodules, for clarity

--- a/lib/generic/modules/breast_cancer_disease.json
+++ b/lib/generic/modules/breast_cancer_disease.json
@@ -6,68 +6,15 @@
     "2. BRCA1/2 lifetime cancer risk data: https://www.cancer.gov/types/breast/hp/breast-ovarian-genetics-pdq#link/_3110_cap",
     "3. Untreated breast cancer survival data: https://www.ncbi.nlm.nih.gov/pubmed/10797344"
   ],
-
   "states": {
     "Initial": {
       "type": "Initial",
-      "direct_transition": "BRCA1_pathogenicity_distribution"
+      "direct_transition": "Breast_cancer_risk_submodule"
     },
 
-    "BRCA1_pathogenicity_distribution": {
-      "type": "Simple",
-      "distributed_transition": [
-        {
-          "distribution": 0.0009,
-          "transition": "BRCA1_pathogenic_attr",
-          "remarks": "0.09% chance in general population of a BRCA1 pathogenic variant"
-        },
-        {
-          "distribution": 0.9991,
-          "transition": "BRCA1_non_pathogenic_attr"
-        }
-      ]
-    },
-
-    "BRCA1_pathogenic_attr": {
-      "type": "SetAttribute",
-      "attribute": "BRCA1_pathogenic_variant",
-      "value": true,
-      "direct_transition": "BRCA2_pathogenicity_distribution"
-    },
-
-    "BRCA1_non_pathogenic_attr": {
-      "type": "SetAttribute",
-      "attribute": "BRCA1_pathogenic_variant",
-      "value": false,
-      "direct_transition": "BRCA2_pathogenicity_distribution"
-    },
-
-    "BRCA2_pathogenicity_distribution": {
-      "type": "Simple",
-      "distributed_transition": [
-        {
-          "distribution": 0.0022,
-          "transition": "BRCA2_pathogenic_attr",
-          "remarks": "0.22% chance in general population of a BRCA2 pathogenic variant"
-        },
-        {
-          "distribution": 0.9978,
-          "transition": "BRCA2_non_pathogenic_attr"
-        }
-      ]
-    },
-
-    "BRCA2_pathogenic_attr": {
-      "type": "SetAttribute",
-      "attribute": "BRCA2_pathogenic_variant",
-      "value": true,
-      "direct_transition": "Age_Guard"
-    },
-
-    "BRCA2_non_pathogenic_attr": {
-      "type": "SetAttribute",
-      "attribute": "BRCA2_pathogenic_variant",
-      "value": false,
+    "Breast_cancer_risk_submodule": {
+      "type": "CallSubmodule",
+      "submodule": "breast_cancer/breast_cancer_risk_factors",
       "direct_transition": "Age_Guard"
     },
 
@@ -83,495 +30,26 @@
     },
 
     "Chance_of_breast_cancer": {
-      "type": "Simple",
-      "complex_transition": [
-        {
-          "condition": {
-            "condition_type": "Gender",
-            "gender": "M"
-          },
-          "transition": "Cancer_risk_male"
-        },
-        {
-          "condition": {
-            "condition_type": "Gender",
-            "gender": "F"
-          },
-          "transition": "Cancer_risk_female"
-        },
-        {
-          "transition": "Terminal"
-        }
-      ]
-    },
-
-    "Cancer_risk_female": {
-      "type": "Simple",
+      "type": "CallSubmodule",
+      "submodule": "breast_cancer/breast_cancer_eval",
       "conditional_transition": [
         {
           "condition": {
             "condition_type": "Attribute",
-            "attribute": "BRCA1_pathogenic_variant",
-            "operator": "==",
-            "value": true
+            "attribute": "Breast_cancer_diagnosis",
+            "operator": "is nil"
           },
-          "transition": "Cancer_risk_female_brca1"
+          "transition": "No_cancer_delay"
         },
         {
           "condition": {
             "condition_type": "Attribute",
-            "attribute": "BRCA2_pathogenic_variant",
-            "operator": "==",
-            "value": true
+            "attribute": "Breast_cancer_diagnosis",
+            "operator": "is not nil"
           },
-          "transition": "Cancer_risk_female_brca2"
-        },
-        {
-          "transition": "Cancer_risk_female_no_brca"
+          "transition": "No_treatment_delay"
         }
       ]
-    },
-
-    "Cancer_risk_female_brca1": {
-      "type": "Simple",
-      "remarks": [
-        "BRCA1 incidence numbers come from https://www.ncbi.nlm.nih.gov/pubmed/12677558"
-      ],
-      "complex_transition": [
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 20,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.0002,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.9998,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        },
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 25,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.0011,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.9989,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        },
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 30,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.0074,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.9926,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        },
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 35,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.0159,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.9241,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        },
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 40,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.0292,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.9708,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        },
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 45,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.0428,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.9572,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        },
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 50,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.0265,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.9735,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        },
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 55,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.0301,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.9699,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        },
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 60,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.0270,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.9730,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        },
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 65,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.0296,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.9704,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        }
-      ]
-    },
-
-    "Cancer_risk_female_brca2": {
-      "type": "Simple",
-      "remarks": [
-        "BRCA2 incidence numbers come from https://www.ncbi.nlm.nih.gov/pubmed/12677558"
-      ],
-      "complex_transition": [
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 20,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.0002,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.9998,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        },
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 25,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.0012,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.9988,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        },
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 30,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.0036,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.9964,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        },
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 35,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.0078,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.9922,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        },
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 40,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.0091,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.9919,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        },
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 45,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.0134,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.9864,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        },
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 50,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.0176,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.9824,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        },
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 55,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.02,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.98,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        },
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 60,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.0217,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.9783,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        },
-        {
-          "condition": {
-            "condition_type": "Age",
-            "operator": ">=",
-            "quantity": 65,
-            "unit": "years"
-          },
-          "distributions": [
-            {
-              "distribution": 0.0238,
-              "transition": "Cancer_start"
-            },
-            {
-              "distribution": 0.9762,
-              "transition": "No_cancer_delay"
-            }
-          ]
-        }
-      ]
-    },
-
-    "Cancer_risk_female_no_brca": {
-      "type": "Simple",
-      "distributed_transition": [
-        {
-          "distribution": 0.0014,
-          "transition": "Cancer_start"
-        },
-        {
-          "distribution": 0.9986,
-          "transition": "No_cancer_delay"
-        }
-      ]
-    },
-
-    "Cancer_risk_male": {
-      "type": "Simple",
-      "distributed_transition": [
-        {
-          "distribution": 0.00000012,
-          "transition": "Cancer_start"
-        },
-        {
-          "distribution": 0.99999988,
-          "transition": "No_cancer_delay"
-        }
-      ]
-    },
-
-    "Cancer_start": {
-      "type": "ConditionOnset",
-      "target_encounter": "breast_cancer_diagnosis_encounter",
-      "codes": [
-        {
-          "system": "SNOMED-CT",
-          "code": "254837009",
-          "display": "Malignant neoplasm of breast (disorder)"
-        }
-      ],
-      "distributed_transition": [
-        {
-          "distribution": 0.5,
-          "transition": "Cancer_start_left_breast"
-        },
-        {
-          "distribution": 0.5,
-          "transition": "Cancer_start_right_breast"
-        }
-      ]
-    },
-
-    "Cancer_start_left_breast": {
-      "type": "SetAttribute",
-      "attribute": "Cancer_left_breast",
-      "value": true,
-      "direct_transition": "No_treatment_delay"
-    },
-
-    "Cancer_start_right_breast": {
-      "type": "SetAttribute",
-      "attribute": "Cancer_right_breast",
-      "value": true,
-      "direct_transition": "No_treatment_delay"
     },
 
     "No_treatment_death_probability": {
@@ -600,7 +78,6 @@
 
     "Death": {
       "type": "Death",
-      "condition_onset": "Cancer_start",
       "direct_transition": "Terminal"
     },
 
