--- a/lib/generic/modules/breast_cancer_disease.json
+++ b/lib/generic/modules/breast_cancer_disease.json
@@ -52,11 +52,65 @@
       ]
     },
 
+    "Mammogram_check": {
+      "type": "Simple",
+      "conditional_transition": [
+        {
+          "condition" : {
+            "condition_type": "Age",
+            "operator": ">=",
+            "quantity": 40,
+            "unit": "years"
+          },
+          "transition": "Mammogram_module"
+        },
+        {
+          "condition": {
+            "condition_type": "Attribute",
+            "attribute": "Breast_cancer_present",
+            "operator": "is nil"
+          },
+          "transition": "No_cancer_delay"
+        },
+        {
+          "condition": {
+            "condition_type": "Attribute",
+            "attribute": "Breast_cancer_present",
+            "operator": "is not nil"
+          },
+          "transition": "No_treatment_delay"
+        }
+      ]
+    },
+
+    "Mammogram_module": {
+      "type": "CallSubmodule",
+      "submodule": "breast_cancer/mammogram",
+      "conditional_transition": [
+        {
+          "condition": {
+            "condition_type": "Attribute",
+            "attribute": "Breast_cancer_present",
+            "operator": "is nil"
+          },
+          "transition": "No_cancer_delay"
+        },
+        {
+          "condition": {
+            "condition_type": "Attribute",
+            "attribute": "Breast_cancer_present",
+            "operator": "is not nil"
+          },
+          "transition": "No_treatment_delay"
+        }
+      ]
+    },
+
     "No_treatment_counter": {
       "type": "Counter",
       "attribute": "Breast_cancer_months_since_diagnosis",
       "action": "increment",
-      "direct_transition": "No_treatment_delay"
+      "direct_transition": "Mammogram_check"
     },
 
     "No_treatment_delay": {
@@ -112,7 +166,7 @@
           "transition": "Terminal"
         },
         {
-          "transition": "Chance_of_breast_cancer"
+          "transition": "Mammogram_check"
         }
       ]
     },
