--- a/lib/generic/modules/breast_cancer_diagnosis_treatment.json
+++ b/lib/generic/modules/breast_cancer_diagnosis_treatment.json
@@ -68,9 +68,10 @@
 
     "No_diagnosis_delay": {
       "type": "Delay",
-      "exact": {
+      "range": {
         "unit": "months",
-        "quantity": 6
+        "low": 6,
+        "high": 12
       },
       "direct_transition": "Mammogram_module"
     },
